
# Balloon Calculator 0.0.1
## 4/2/2025

### Features
- Added 'Documentation' folder
    - Added 'changelogs.txt' file
    - Added 'docs.txt' file
    - Added 'todo.txt' file
- Added 'main.cpp'
- Added 'Meeting Notes' folder
    - Added '3-25-2025.txt'

### Changes
- NA

### Bug Fixes
- NA