@@ -1,0 +1,17 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
+[env:adafruit_circuitplayground_m0]
+platform = atmelsam
+board = adafruit_circuitplayground_m0
+framework = arduino
+monitor_speed = 115200
+
+lib_deps = adafruit/Adafruit Circuit Playground@^1.12.0
